modified openapi.yml/InventoryController.java
